# flink-ci

./: .gitignore  .pre-commit-config.yaml  Andreas_notebook.md  CONTRIBUTING.md  Dockerfile  README.md  build_images.sh  docker-compose.yml  pyproject.toml
.devcontainer/: .devcontainer.json  Dockerfile  README.md  devcontainer.json  docker-compose-atlas.yml  docker-compose-dev.yml  docker-compose-elastic-enterprise.yml  docker-compose-elastic.yml  docker-compose-elastic7.yml  docker-compose-kafka.yml  docker-compose.yml  initialize.sh  postcreate.sh  updatecontent.sh
.jobmanager/: .devcontainer.json
.taskmanager/: .devcontainer.json
code/: publish_state_job_for_test.py  publish_state_test_data.json  simple_test.py  test_publish_state_job.py
devcontainer_bak/: devcontainer.json  docker-compose.yml
docker/: build_images.sh  elastic_setup.sh
elasticsearch_sink/: app-search-documents.dev.yml  publish-state.dev.yml  template.j2
example_data/: create_domain_event.json  publish_state_input_example1.json
examples/: README.md  elastic_sink_demo.py  flink_type_demo.py  get_example_data.py  kafka_source_flink_sink_demo.py  test__example.py  word_count.py
experiment/: demo.py  demo2.py  demo3.py  elastic_test.py  flink_elastic_connector.py  get_example_data.py  setup_data_stream.md
flink_jobs/: README.md  __init__.py  get_entity.py  publish_state.md  publish_state.py  synchronize_app_search.py
flink_tasks/: README.md  __init__.py
jobs/: .env_sample  README.md  debug_publish_state.py  publish_state.py
keycloak/: atlas-dev.json
queries/: get-atlas-entities.es  get-foo.es  setup_index_pattern.es
scripts/: get_keycloak_token.py  init_atlas_types.py  upload_sample_data.sh
tasks/: __init__.py
tests/: test_error_handlers.py  test_get_previous_entity_func.py  test_plug_elastic_client.py  test_prepare_notification_to_index_func.py  (+1 more)
(+150 files in other folders)
