[tool.poetry]
name = "flink-tasks"
version = "0.1.0"
description = ""
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
m4i-atlas-core = { git = "https://github.com/aureliusenterprise/m4i_atlas_core.git", rev = "42fb5db6b41bacaa5668df0df8b4a78a40c69a0e" }
apache-flink = "^1.17"
dataclasses-json = "^0.6"
kafka-python = "^2.0"
elastic-transport = "^8.4"
elasticsearch = "^8.9"
debugpy = "^1.8.0"

[tool.poetry.dev-dependencies]
kafka = "^1.3"
mock = "^5.1"
pre-commit = "^3.4"
pytest = "^7.4"
pytest-cov = "4.1.0"

[tool.pyright]
pythonVersion = "3.10"
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "basic"
venv = ".venv"
venvPath = "."

[tool.ruff]
select = ["ALL"]
ignore = [
    # Flink function protocol shadows Python built in function names.
    "A003",
    # Self and cls do not require annotations.
    "ANN101",
    "ANN102",
    # Pyright error codes are obnoxiously long. Ignore lint telling you to use them.
    "PGH003",
    # No module documentation needed.
    "D100",
    # No documentation of public modules needed.
    "D104",
    # No point in documenting magic methods.
    "D105",
    # Makes more sense to use `Parameters` in the main class instead of in the `__init__` .
    "D107",
    "FBT003",
]
line-length = 120
target-version = "py310"

[tool.ruff.per-file-ignores]
# Ignore unused imports in init, caused by star imports.
# More convenient to provide `__all__` in files instead of duplicating in package __init__.
"__init__.py" = ["F401", "F403", "F405"]
"test__*.py" = ["PLR2004", "S101"]
"scripts/*" = ["INP001"]

[tool.ruff.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
